# aegyo

./: .gitattributes  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
cmake/: External.cmake  Flags.cmake
cmake/assets/: .gitignore  Icon.icns  Info.plist.in  prepare_font.py
src/: app.cpp  main.cpp  resource.hpp.in
src/core/: assets.hpp  colors.hpp  hangul.cpp  hangul.hpp  io.cpp  io.hpp  rng.cpp  rng.hpp  shapes.cpp  shapes.hpp  string.cpp  string.hpp  text.cpp  text.hpp  vocabulary.cpp  vocabulary.hpp  windows.cpp  windows.hpp
src/core/assets/: font.cpp  font.hpp
src/core/graphics/: font.cpp  font.hpp  window.cpp  window.hpp
src/core/graphics/platform/: windows.cpp  windows.hpp
src/core/graphics/settings/: colors.hpp  screen.hpp
src/core/math/: rng.cpp  rng.hpp
src/core/platform/: windows.cpp  windows.hpp
src/core/settings/: antialiasing.cpp  antialiasing.hpp  colors.hpp  screen.hpp
src/modules/: vocabulary.cpp  vocabulary.hpp
src/ui/: circles.cpp  circles.hpp  items.hpp  memo.hpp  percentage.hpp  widgets.cpp  widgets.hpp
src/ui/components/: base.cpp  base.hpp
tests/: test_all.cpp
